fix(files): whitespace name error and modal fix

--- a/components/ui/Modal/Modal.less
+++ b/components/ui/Modal/Modal.less
@@ -62,8 +62,8 @@
   .modal {
     height: @full;
     &.small {
-      height: fit-content;
-      margin-top: auto;
+      height: auto;
+      top: inherit;
     }
   }
   .modal-card {
