--- a/components/views/files/file/File.less
+++ b/components/views/files/file/File.less
@@ -50,7 +50,7 @@
     .maintext {
       text-overflow: ellipsis;
       overflow: hidden;
-      white-space: nowrap;
+      white-space: pre;
     }
     .subtext {
       &:extend(.font-muted);
